<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Light File Manager</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="button_action">Action</string>
    <string name="button_hex">Hex</string>
    <string name="button_search">Search</string>
    <string name="button_tree">Tree</string>
    <string name="button_more">More</string>

    <string name="button_create_item">Create</string>
    <string name="button_delete_item">Delete</string>
    <string name="button_move_item">Move</string>
    <string name="button_copy_item">Copy</string>

    <string name="button_history_changes">History changes</string>
    <string name="button_settings">Settings</string>
    <string name="button_about">About</string>

    <string name="button_clear_history_changes">Clear</string>

    <string-array name="languages_list_entry">
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string-array name="languages_list_value">
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>