<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentRight="false"
    android:layout_centerHorizontal="false"
    android:layout_centerInParent="false"
    android:layout_centerVertical="false"
    android:background="@color/colorBackgroundBasic"
    android:gravity="center_horizontal|center"
    android:orientation="vertical">

    <Button
        android:id="@+id/create_button"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35px"
        android:layout_marginRight="35px"
        android:layout_marginTop="35px"
        android:background="@color/colorBackgroundNavigationButton"
        android:elevation="1dp"
        android:text="@string/button_create_item" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35px"
        android:layout_marginRight="35px"
        android:layout_marginTop="5px"
        android:background="@color/colorBackgroundNavigationButton"
        android:text="@string/button_delete_item" />

    <Button
        android:id="@+id/move_button"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35px"
        android:layout_marginRight="35px"
        android:layout_marginTop="5px"
        android:background="@color/colorBackgroundNavigationButton"
        android:text="@string/button_move_item" />

    <Button
        android:id="@+id/copy_button"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35px"
        android:layout_marginLeft="35px"
        android:layout_marginRight="35px"
        android:layout_marginTop="5px"
        android:background="@color/colorBackgroundNavigationButton"
        android:text="@string/button_copy_item" />

</LinearLayout>