<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackgroundBasic"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTabLayout"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/colorTabLayoutIndicator"
        app:tabMode="fixed" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/navigation_bottom_layout"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/tab_layout"
        android:layout_marginLeft="5px"
        android:layout_marginRight="5px"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/container_fragment_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <FrameLayout
            android:id="@+id/container_fragment_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="0.1"
        android:background="@color/colorBackgroundNavigationBottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5px"
            android:layout_weight="1"
            android:background="@color/colorBackgroundNavigationButton"
            android:text="@string/button_action"
            android:textAllCaps="false"
            android:textSize="11sp" />

        <Button
            android:id="@+id/hex_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5px"
            android:layout_weight="1"
            android:background="@color/colorBackgroundNavigationButton"
            android:text="@string/button_hex"
            android:textAllCaps="false"
            android:textSize="11sp" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5px"
            android:layout_weight="1"
            android:background="@color/colorBackgroundNavigationButton"
            android:text="@string/button_search"
            android:textAllCaps="false"
            android:textSize="11sp" />

        <Button
            android:id="@+id/tree_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5px"
            android:layout_weight="1"
            android:background="@color/colorBackgroundNavigationButton"
            android:text="@string/button_tree"
            android:textAllCaps="false"
            android:textSize="11sp" />

        <Button
            android:id="@+id/more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5px"
            android:layout_weight="1"
            android:background="@color/colorBackgroundNavigationButton"
            android:text="@string/button_more"
            android:textAllCaps="false"
            android:textSize="11sp" />

    </LinearLayout>

</RelativeLayout>

